--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,10 @@ main h4 {
 }  
 
 @media screen and (max-width: 700px) {
+  .content-wrapper {
+    padding: 0 5px;
+  }
+
   .download-link-wrapper {
     display: flex;
     flex-direction: column;
